#
# This file is part of HiKoB Openlab. 
# 
# HiKoB Openlab is free software: you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation, version 3.
# 
# HiKoB Openlab is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with HiKoB Openlab. If not, see
# <http://www.gnu.org/licenses/>.
#
# Copyright (C) 2011 HiKoB.
#

# Add the test directory
add_subdirectory(tests)

# Add the example directory
add_subdirectory(examples)

# Add the fiteco directory
add_subdirectory(fiteco)

# Add the nancy directory
add_subdirectory(newt)

# Add the imu_mouse directory
add_subdirectory(imu_mouse)

# Add the sniffer directory
add_subdirectory(sniffer)
