#
# This file is part of HiKoB Openlab. 
# 
# HiKoB Openlab is free software: you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation, version 3.
# 
# HiKoB Openlab is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with HiKoB Openlab. If not, see
# <http://www.gnu.org/licenses/>.
#
# Copyright (C) 2011-2013 HiKoB.
#

# Add the l3g4200d directory
add_subdirectory(l3g4200d)

# Add the lsm303dlhc directory
add_subdirectory(lsm303dlhc)

# Add the lps331ap directory
add_subdirectory(lps331ap)

# Add the isl29020 directory
add_subdirectory(isl29020)

# Add the rf2xx directory
add_subdirectory(rf2xx)

# Add the event directory
add_subdirectory(event)

# Add the soft_timer directory
add_subdirectory(soft_timer)

# Add the phy directory
add_subdirectory(phy)

# Add the libprintf directory
add_subdirectory(libprintf)

# Add the fat32 directory
add_subdirectory(fat32)

# Add the tdma directory
add_subdirectory(tdma)
